added channel separation

--- a/tar_unzip.ipynb
+++ b/tar_unzip.ipynb
@@ -226,7 +226,7 @@
     "import tarfile\n",
     "from pathlib import Path\n",
     "\n",
-    "base_dir = Path(\"data/0107\")   \n",
+    "base_dir = Path(\"/Users/seowonchoi/Documents/NAPPL/Operation/data/upgrade-camera/0203\")   \n",
     "count = 0\n",
     "\n",
     "for tar_path in sorted(base_dir.glob(\"*.tar.gz\")):\n",
